--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row">
     <div class="col-12 alert alert-notice text-center mb-0">
 
@@ -43,7 +43,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container-fluid mb-4">
   <div class="row">
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row">
           <div class="col col-md-10 offset-md-1 text-left">
-            <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
+            <h2><%= @last_updated_on.strftime("%A, %B %e") %>:<br><%= pluralize @new_cases, "New Coronavirus Case" %>, <%= pluralize @delayed_results, "Delayed Test Results" %>, <%= pluralize @new_deaths, "New Death" %> </h2>
             <p class="text-center">Face coverings are now required to be worn in public. Do not gather in groups larger than ten people and maintain six feet of social distancing from others. <%= link_to "Read More", "http://epstrong.org/health-orders.php" %></p>
           </div>
         </div>
